# thresher

MATLAB-Files/: THRESHER_CONTROLLER_DESIGN.m  THRESHER_DYNAMIC_MODEL.m
MATLAB-Files/HELPERS/: dsm.m  dsm_regob.m  obg_reg.m  tsd.m
MATLAB-Files/SIMULINK/: THRESHER_CONTROLLER_ROS2.slx
install/: local_setup.sh  setup.sh
log/: latest_build
src/thresher_controller_ros2/: CMakeLists.txt  package.xml  packageInfo.mat
src/thresher_controller_ros2/include/thresher_controller_ros2/: THRESHER_CONTROLLER_ROS2.h  THRESHER_CONTROLLER_ROS2_private.h  THRESHER_CONTROLLER_ROS2_types.h  multiword_types.h  ros2nodeinterface.h  rtmodel.h  rtwtypes.h  slros2_initialize.h  slros_busmsg_conversion.cpp  visibility_control.h
src/thresher_controller_ros2/src/: THRESHER_CONTROLLER_ROS2.cpp  THRESHER_CONTROLLER_ROS2_data.cpp  main.cpp  ros2nodeinterface.cpp  slros2_initialize.cpp
